--- a/Final_Assignment/honesty.html
+++ b/Final_Assignment/honesty.html
@@ -35,7 +35,7 @@ Dated: 10th December 2021</p>
 </div>
 
 <footer>
-  ©Parbaldeep Singh Brar - <a href="https://github.com/parbalbrar/web/blob/main/info.html"> Github link </a>
+  ©Parbaldeep Singh Brar - <a href="https://github.com/parbalbrar/Web-Assignment"> Github link </a>
 </footer>
 
 
