--- a/Final_Assignment/info.html
+++ b/Final_Assignment/info.html
@@ -66,7 +66,7 @@
       </form>
 
 <footer>
-  ©Parbaldeep Singh Brar - <a href="https://github.com/parbalbrar/web/blob/main/info.html"> Github link </a>
+  ©Parbaldeep Singh Brar - <a href="https://github.com/parbalbrar/Web-Assignment"> Github link </a>
 </footer>
 
 
