--- a/Final_Assignment/reflection.html
+++ b/Final_Assignment/reflection.html
@@ -42,7 +42,7 @@
 </div>
 
 <footer>
-  ©Parbaldeep Singh Brar - <a href="https://github.com/parbalbrar/web/blob/main/info.html"> Github link </a>
+  ©Parbaldeep Singh Brar - <a href="https://github.com/parbalbrar/Web-Assignment"> Github link </a>
 </footer>
 
 
